--- a/index.html
+++ b/index.html
@@ -1,18 +1,109 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bootstrap 5 Setup</title>
-  <!-- Bootstrap 5 CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Bootstrap 5 Full Exercises</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <style>
+    section { margin-bottom: 50px; padding: 20px; border: 1px solid #ddd; border-radius: 10px; }
+    .section-title { margin-bottom: 20px; }
+    .custom-card { max-width: 300px; }
+    .pricing-box { border: 1px solid #ccc; padding: 20px; border-radius: 8px; background: #f9f9f9; }
+    .media img { width: 64px; height: 64px; margin-right: 15px; }
+    .fixed-footer { background: #222; color: white; padding: 10px; }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1 class="mt-5">Hello, Bootstrap 5!</h1>
-    <p>This is a quick test of your setup.</p>
-  </div>
-  <!-- Bootstrap 5 JavaScript Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<div class="container py-5">
+
+  <h1 class="mb-5 text-center">Bootstrap 5 Exercises Showcase</h1>
+
+  <!-- 3.1 Responsive Grid -->
+  <section>
+    <h2 class="section-title">Responsive Grid</h2>
+    <div class="row text-white text-center">
+      <div class="col-12 col-sm-6 col-lg-4 bg-primary p-3">Column 1</div>
+      <div class="col-12 col-sm-6 col-lg-4 bg-success p-3">Column 2</div>
+      <div class="col-12 col-sm-6 col-lg-4 bg-danger p-3">Column 3</div>
+    </div>
+  </section>
+
+  <!-- 4.1 Two-column layout -->
+  <section>
+    <h2 class="section-title">Two-column Layout</h2>
+    <div class="row">
+      <div class="col-md-3 bg-light border-end">Sidebar</div>
+      <div class="col-md-9">Main Content Area</div>
+    </div>
+  </section>
+
+  <!-- 4.2 Four-column equal layout -->
+  <section>
+    <h2 class="section-title">Four-column Layout</h2>
+    <div class="row">
+      <div class="col-sm-3 bg-warning p-2 text-center">Col 1</div>
+      <div class="col-sm-3 bg-warning p-2 text-center">Col 2</div>
+      <div class="col-sm-3 bg-warning p-2 text-center">Col 3</div>
+      <div class="col-sm-3 bg-warning p-2 text-center">Col 4</div>
+    </div>
+  </section>
+
+  <!-- 5.1 Centered Content -->
+  <section>
+    <h2 class="section-title">Centered Content</h2>
+    <div class="row justify-content-center align-items-center" style="height: 100px;">
+      <div class="col-6 text-center bg-light p-2">Centered Box</div>
+    </div>
+  </section>
+
+  <!-- 5.2 Reordering -->
+  <section>
+    <h2 class="section-title">Column Reordering</h2>
+    <div class="row">
+      <div class="col-md-6 order-md-2 bg-info text-white p-3">First visually on desktop</div>
+      <div class="col-md-6 order-md-1 bg-secondary text-white p-3">Second visually on desktop</div>
+    </div>
+  </section>
+
+  <!-- 6.1 Flex Navbar -->
+  <section>
+    <h2 class="section-title">Responsive Flex Navbar</h2>
+    <div class="d-flex flex-column flex-md-row justify-content-between bg-dark text-white p-3">
+      <div>Logo</div>
+      <div>Links</div>
+      <div>Search</div>
+    </div>
+  </section>
+
+  <!-- 6.2 Card Layout -->
+  <section>
+    <h2 class="section-title">Card with Alignment</h2>
+    <div class="card p-3 d-flex flex-row justify-content-between align-items-center">
+      <div>Card Content</div>
+      <button class="btn btn-primary">Action</button>
+    </div>
+  </section>
+
+  <!-- 7 Typography -->
+  <section>
+    <h2 class="section-title">Typography</h2>
+    <p class="display-1">Display Heading</p>
+    <p class="lead">Lead paragraph text.</p>
+    <p class="text-muted fw-bold text-uppercase">Muted bold uppercase</p>
+    <p class="text-lowercase">TEXT lowercase</p>
+    <p class="text-capitalize">this is capitalized text</p>
+  </section>
+
+</div>
+
+<!-- Footer -->
+<div class="fixed-footer position-fixed bottom-0 w-100 text-center">
+  &copy; 2025 Bootstrap 5 Exercises
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
